<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp" >

    <TextView
        android:id="@+id/lbl_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_barbearia"
        android:textColor="@color/black_500"
        android:textSize="35sp"
        android:fontFamily="@font/poppins_semibold"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/desc_img_logo"
        android:src="@mipmap/img_cesao_logo_layer"
        android:layout_below="@id/lbl_titulo"
        />

    <TextView
        android:id="@+id/lbl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:text="@string/lbl_email"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="23sp"
        android:textColor="@color/black_500"
        />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textEmailAddress"
        android:layout_below="@id/lbl_email"
        android:drawableStart="@drawable/custom_email"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:hint="@string/hint_email"
        android:autofillHints="emailAddress"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_medium"
        android:background="@drawable/custom_input"
        />

    <TextView
        android:id="@+id/lbl_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_email"
        android:text="@string/lbl_senha"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="23sp"
        android:textColor="@color/black_500"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/txt_senha"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:layout_below="@id/lbl_senha"
        android:drawableStart="@drawable/custom_lock"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:hint="@string/hint_senha"
        android:autofillHints="password"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_medium"
        android:background="@drawable/custom_input"
        />


    <TextView
        android:id="@+id/lbl_redefinir"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/btn_ver_senha"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/lbl_redefinir"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/link_cadastro"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/lbl_redefinir"
        android:layout_marginTop="5dp"
        android:text="@string/link_cadastro"
        android:fontFamily="@font/poppins_light"
        android:textSize="16sp"
        android:textColor="@color/red"
        />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@id/link_cadastro"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_entrar"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:background="@drawable/custom_button2"
        />

    <ImageButton
        android:id="@+id/btn_ver_senha"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/lbl_senha"
        android:layout_toEndOf="@id/txt_senha"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_visibility"/>

</RelativeLayout>